// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ActivityIcon Props should render with call icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#50C87820",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#50C878",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`ActivityIcon Props should render with message icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#4A90E220",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#4A90E2",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`ActivityIcon Props should render with notification icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#9B59B620",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#9B59B6",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`ActivityIcon Props should render with status icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#F5A62320",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#F5A623",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`ActivityIcon Rendering should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#4A90E220",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#4A90E2",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`ActivityIcon Rendering should match snapshot with different color 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#FF3B3020",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#FF3B30",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`ActivityIcon Rendering should match snapshot with different icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      {
        "backgroundColor": "#50C87820",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#50C878",
          "fontSize": 24,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;
